After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 749523 - cvsmooth: Wrong assignment of prop leads to crash
cvsmooth: Wrong assignment of prop leads to crash
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
unspecified
Other Linux
: Normal normal
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-05-18 05:01 UTC by Vineeth
Modified: 2015-05-18 07:51 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix assignment (1.23 KB, patch)
2015-05-18 05:02 UTC, Vineeth
committed Details | Review
rename properties (8.24 KB, patch)
2015-05-18 05:13 UTC, Vineeth
committed Details | Review

Description Vineeth 2015-05-18 05:01:47 UTC
when setting param2 property, it is wrongly being assigned to param1.
This leads to wrong behavior and a crash when param2 is set as 0.
Comment 1 Vineeth 2015-05-18 05:02:48 UTC
Created attachment 303500 [details] [review]
fix assignment
Comment 2 Vineeth 2015-05-18 05:13:32 UTC
Created attachment 303501 [details] [review]
rename properties
Comment 3 Sebastian Dröge (slomo) 2015-05-18 07:51:02 UTC
commit 6b43d7f770c97761fe9ef20d821eef7befed7d9e
Author: Vineeth T M <vineeth.tm@samsung.com>
Date:   Mon May 18 14:12:56 2015 +0900

    cvsmooth: rename properties
    
    The properties are named as param1 to param4, which makes very little sense
    hence renamed the properties according to what it is doing.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=749523

commit 1fa8e75f444de606f21fda12fa05cc009f5320d6
Author: Vineeth T M <vineeth.tm@samsung.com>
Date:   Mon May 18 14:01:59 2015 +0900

    cvsmooth: Wrong assignment of prop leads to crash
    
    when setting param2 property, it is wrongly being assigned to param1.
    This leads to wrong behavior and a crash when param2 is set as 0.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=749523